// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Content 1`] = `
<div
  className="centered-narrow"
>
  <div
    className="Content"
  >
    <div
      className="Fields"
    >
      <div
        className="fieldset active form-group"
      >
        <h2>
          Introduction
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
        <div
          className="subNavigation"
        >
          <button
            className=""
            onClick={[Function]}
          >
            introduction
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            dimensions
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            solar
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            location
          </button>
        </div>
        <div
          className="subNavigationContent"
        />
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Parameters - Model A
        </h2>
        <p>
          How is the existing home built?
        </p>
        <div
          className="subNavigation"
        >
          <button
            className=""
            onClick={[Function]}
          >
            build
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            mechanical
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            energyPrices
          </button>
        </div>
        <div
          className="subNavigationContent"
        />
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Parameters - Model B
        </h2>
        <p>
          What improvements would you like to consider?
        </p>
        <div
          className="subNavigation"
        >
          <button
            className=""
            onClick={[Function]}
          >
            build
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            mechanical
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            energyPrices
          </button>
        </div>
        <div
          className="subNavigationContent"
        />
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Financing the Net-zero Upgrade
        </h2>
        <p>
          Lorem ipsum
        </p>
        <div
          className="subNavigation"
        >
          <button
            className=""
            onClick={[Function]}
          >
            improvementsSection1
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            improvementsSection2
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            improvementsSection3
          </button>
        </div>
        <div
          className="subNavigationContent"
        />
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2>
          Business Case
        </h2>
        <p>
          Lorem ipsum
        </p>
        <div
          className="subNavigation"
        >
          <button
            className=""
            onClick={[Function]}
          >
            paceLoanTerm
          </button>
          <button
            className=""
            onClick={[Function]}
          >
            interest
          </button>
        </div>
        <div
          className="subNavigationContent"
        />
      </div>
    </div>
    <div
      className="Navigation"
    >
      <button
        className="active"
        onClick={[Function]}
      >
        introduction
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        Parameters A
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        Parameters B
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        financing
      </button>
      <br />
      <button
        className=""
        onClick={[Function]}
      >
        business
      </button>
      <br />
    </div>
  </div>
</div>
`;

exports[`renders formatQuestion with float question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="questionFloat"
  >
    Float
  </label>
  <input
    className="form-control"
    required={true}
    type="number"
  />
</div>
`;

exports[`renders formatQuestion with gap question 1`] = `
<div
  className="spacer"
>
   
</div>
`;

exports[`renders formatQuestion with integer question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question2Key"
  >
    Integer
  </label>
  <input
    className="form-control"
    required={false}
    type="number"
  />
  <div
    className="input-group-append"
  >
    <span
      className="input-group-text"
    >
      IBU
    </span>
  </div>
</div>
`;

exports[`renders formatQuestion with text question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question3Key"
  >
    Text Label
  </label>
  <input
    className="form-control"
    required={true}
    type="text"
  />
</div>
`;
